force-app/main/default/objects/Quiz_Question__c/Quiz_Question__c.object-meta.xml
<CustomObject>
    <description>Represents a question within a quiz</description>
    <label>Quiz Question</label>
    <nameField>
        <displayFormat>QQ-{00000}</displayFormat>
        <label>Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>