force-app/main/default/objects/Quiz_Question__c/fields/Explanation__c.field-meta.xml
<CustomField>
    <fullName>Explanation__c</fullName>
    <description>Explanation shown to learners in Training mode after they answer the question. Helps reinforce learning by explaining why the correct answer is right.</description>
    <inlineHelpText>Explanation shown after answering (Training mode only). Explain why the correct answer is right.</inlineHelpText>
    <label>Explanation</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>