force-app/main/default/objects/Quiz_Question__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of points this question is worth</description>
    <inlineHelpText>Enter the point value for this question (default: 1)</inlineHelpText>
    <label>Points</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>