force-app/main/default/objects/Quiz_Question__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <description>The text of the question</description>
    <inlineHelpText>Enter the question text that will be displayed to learners</inlineHelpText>
    <label>Question Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>