force-app/main/default/objects/Quiz_Question__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <description>The type of question (MultipleChoice, TrueFalse, etc.)</description>
    <inlineHelpText>Select the question type</inlineHelpText>
    <label>Question Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MultipleChoice</fullName>
                <default>true</default>
                <label>Multiple Choice</label>
            </value>
            <value>
                <fullName>TrueFalse</fullName>
                <label>True/False</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>