force-app/main/default/objects/Quiz_Question__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this question must be answered</description>
    <inlineHelpText>Check if this question is required</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>